--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -45,17 +45,27 @@ abcover_byspecies <- abcover_raw %>%
     percentcover = n_distinct(site_rep_dist)/41) %>% 
   ungroup() %>%
   dplyr::select(c(site, species, percentcover)) %>% 
-  mutate(datatype = as.character("c")) %>% # adding "percent cover" identifier to species name
-  mutate(species_datatype = paste(species, datatype, sep="_"))
+  mutate(datatype = as.character("ab")) %>% # adding "percent cover" identifier to species name
+  mutate(species_datatype = paste(species, datatype, sep="_")) %>% 
+  dplyr::select(!c(species, datatype)) %>% 
+  rename(species = species_datatype)
 
 density_byspecies <- density_raw %>% 
   group_by(site, species) %>% 
-  dplyr::summarize(species_count = mean(count))
+  dplyr::summarize(species_count = mean(count)) %>% 
+  mutate(datatype = as.character("dn")) %>% # adding "density" identifier to species name
+  mutate(species_datatype = paste(species, datatype, sep="_")) %>% 
+  dplyr::select(!c(species, datatype)) %>% 
+  rename(species = species_datatype)
 
 germination_byspecies <- germination_raw %>%
   rename(species = species_diversity) %>%
   group_by(site, species) %>%
-  dplyr::summarize(seed_density = mean(n_per_cm3))
+  dplyr::summarize(seed_density = mean(n_per_cm3)) %>% 
+  mutate(datatype = as.character("sd")) %>% # adding "seed bank" identifier to species name
+  mutate(species_datatype = paste(species, datatype, sep="_")) %>% 
+  dplyr::select(!c(species, datatype)) %>% 
+  rename(species = species_datatype)
 
 abcover_nmdsprep <- abcover_byspecies %>%
   tidyr::spread(species, percentcover) %>% 
@@ -69,10 +79,12 @@ germination_nmdsprep <- germination_byspecies %>%
   tidyr::spread(species, seed_density) %>% 
   replace(is.na(.), 0)
 
-nmds_total <- abcover_nmdsprep %>%
+nmds_total_prep <- abcover_nmdsprep %>%
   left_join(density_nmdsprep, by = "site") %>%
   left_join(germination_nmdsprep, by = "site") %>% 
-  replace(is.na(.), 0) %>%
+  replace(is.na(.), 0) 
+
+nmds_total <- nmds_total_prep %>%
   dplyr::select(!c("site"))
 ```
 
@@ -91,6 +103,54 @@ nmds_total.nmds <- metaMDS(nmds_total,
 ordiplot(nmds_total.nmds, type = "t")
 
 nmds.fort <- fortify(nmds_total.nmds)
+```
+
+```{r NMDS prep from Stephanie code}
+
+nmds_total.nmds2 <- metaMDS(nmds_total, 
+                            autotransform = F)
+
+scores(nmds_total.nmds2)
+
+stressplot(nmds_total.nmds2)
+
+nmds2_df <- data.frame(nmds_total.nmds2$points, nmds_total_prep) # adds NMDS1 and NMDS2 values
+
+# plot
+colnames(nmds2_df)[colnames(nmds2_df) == 'site'] <- 'hillslope' # rename "site" to "hillslope"
+
+total_nmds2_hillslope <- ggplot(nmds2_df, 
+       aes(x = MDS1, y = MDS2, color = hillslope, shape = hillslope)) + # shape = site, color = site
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("orange", "brown", "green", "darkgreen", "lightblue", "blue", "navy")) + #"gray0", "gray30", "gray60"
+  scale_shape_manual(values = c(16,16, 15, 15, 17, 17, 17)) + 
+  theme_bw() +
+  #stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: all data")
+
+nmds_total_prep <- nmds_total_prep %>% 
+  mutate(standtype_ID = 1)
+nmds_total_prep$standtype_ID <- 1:7 #shorten df to first 7 rows
+
+nmds_total.nmds2_plot <- scores(nmds_total.nmds2, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("standtype_ID") %>% 
+  mutate_at(c('standtype_ID'), as.numeric) %>% 
+  full_join(nmds_total_prep, by = "standtype_ID") %>%  
+  dplyr::select(!c(standtype_ID))
+
+dim(nmds_total.nmds2_plot)
+
+# envfit() takes the output of metaMDS() and the species matrix you created
+fit_below_nperg <- envfit(seedbank_nperg_bysamplocation_nmds, seedbank_nperg_bysamplocation_nmdsprep, perm = 999) # pvalues for spp and stand, site, stand_core
+
+# extract p-values for each species
+fit_below_pvals_nperg <- fit_below_nperg$vectors$pvals %>% 
+  as.data.frame() %>% 
+  rownames_to_column("species") %>% 
+  dplyr::rename("pvals" = ".") %>% 
+  filter(!species == 'standtype_ID')
+view(fit_below_pvals_nperg)
 ```
 
 ```{r NMDS Graphing}
