--- a/ch1_standdeg_canopy.Rmd
+++ b/ch1_standdeg_canopy.Rmd
@@ -56,6 +56,7 @@ library(multcompView) #Visualizations of Paired Comparisons, functions: TukeyHSD
 #citation("DHARMa")
 library(ggpmisc)
 library(segmented)
+library(strucchange)
 ```
 
 ```{r colors, include=TRUE}
@@ -323,7 +324,7 @@ abcover_bylf_bystatus <- abcover_full_v_omitground %>%
     count_per_transect = n_distinct(site_rep_dist), 
     percentcover = n_distinct(site_rep_dist)/41 # <-- calculate percent cover by transect, lifeform, and status
     )
-view(abcover_bylf_bystatus) # prints to new tab
+# view(abcover_bylf_bystatus) # prints to new tab
 #write.csv(abcover_bylf_bystatus,"processed/abcover_bylf_bystatus.csv")
 # visualizing data
 
@@ -427,7 +428,7 @@ abcover_nativecover <- abcover_full_v %>%
   dplyr::summarize(count_per_transect = length(unique(distance)), 
                   percentcover_native = length(unique(distance))/41
                   )
-view(abcover_nativecover)
+head(abcover_nativecover)
 
 abcover_nncover <- abcover_full_v %>% 
   na.omit() %>%  
@@ -436,11 +437,11 @@ abcover_nncover <- abcover_full_v %>%
   dplyr::summarize(count_per_transect = length(unique(distance)), 
                   percentcover_nonnative = length(unique(distance))/41
                   )
-view(abcover_nncover)
+head(abcover_nncover)
 
 abcover_bystatus <- abcover_nativecover %>% 
   left_join(abcover_nncover, by = 'site_rep')
-view(abcover_bystatus)
+head(abcover_bystatus)
 
 # copy/paste data, edited in Excel, saved as csv in 2022b folder
 abcover_bystatus_edited <- read.csv("abcover_bystatus.csv", header = TRUE, na.strings=c("","NA"))
@@ -471,15 +472,16 @@ cover_statuslf_matrix <- cover_statuslf_matrix %>%
 cover_statuslf_matrix$status_lifeform <- paste(cover_statuslf_matrix$status, cover_statuslf_matrix$lifeform, sep="_") # combine status and life form to one column
 cover_statuslf_matrix_long <- cover_statuslf_matrix %>%
  dplyr::select(standtype, site_rep, percentcover, status_lifeform)
-view(cover_statuslf_matrix_long)
+head(cover_statuslf_matrix_long)
 
 cover_statuslf_matrix_wide1 <- cover_statuslf_matrix_long %>%
   spread(status_lifeform, percentcover)
-write.csv(cover_statuslf_matrix_wide1,"processed/coverstatus.csv")
+#write.csv(cover_statuslf_matrix_wide1,"processed/coverstatus.csv")
 
-view(cover_statuslf_matrix_wide1)
+head(cover_statuslf_matrix_wide1)
 
-abcover_nativecover_nngrasscover <- left_join(abcover_nativecover, cover_statuslf_matrix_wide1, by = "site_rep")
+abcover_nativecover_nngrasscover <- left_join(abcover_nativecover, 
+                                              cover_statuslf_matrix_wide1, by = "site_rep")
 view(abcover_nativecover_nngrasscover)
 
 formula6 <- abcover_nativecover_nngrasscover$percentcover_native ~ abcover_nativecover_nngrasscover$nonnative_grass
@@ -1787,7 +1789,7 @@ modelgraph_nngrass
 
 
 ```{r}
-library(strucchange)
+
 
 abcover_nonnativecover_nngrasscover2 <- abcover_nonnativecover_nngrasscover[order(abcover_nonnativecover_nngrasscover$nonnative_grass),]
 
@@ -2388,7 +2390,7 @@ standheight_full <- read_csv("deg_maxheight.csv",
                           TRUE ~ site)) %>% 
   mutate(standtype = fct_relevel(standtype, "Intact", "Matrix", "Degraded")) %>% 
   filter(site!= "Intact_4")
-view(standheight_full)
+head(standheight_full)
 
 standheight_full %>%  
   group_by(site,rep) %>% 
@@ -2430,10 +2432,21 @@ ggplot(standheight_full,
 ```
 
 ```{r combine columns - canopy height, include = TRUE}
+nativecover_load <- read.csv("processed/abcover_nativecover_nngrasscover.csv")
+nativecover <- nativecover %>% 
+  mutate(site_rep = case_when(
+    site_rep == "Intact_1_1" ~ "Intact1_1", # old name ~ new name
+      site_rep == "Intact_2_2" ~ "Intact2_2",
+      site_rep == "Intact_3_3" ~ "Intact3_3",
+    TRUE ~ as.character(site_rep)  # Keep other observations unchanged
+  )) 
+nativecover <- nativecover_load %>% 
+  dplyr::select(!c(X, standtype.x, standtype.y)) 
+
 
 # mean SD by transect - 15 rows
 standheight_siterep_meanSD <- standheight_full %>% 
-  left_join(nncover, by = 'site_rep') %>% 
+  left_join(nativecover, by = 'site_rep') %>% 
   group_by(standtype, site_rep) %>%
   summarize(mean_height = mean(height_cm),
             n = length((height_cm)),
@@ -2445,7 +2458,7 @@ standheight_siterep_meanSD <- standheight_full %>%
 
 # mean SD by transect - 15 rows
 standheight_site_meanSD <- standheight_full %>% 
-   left_join(nncover, by = 'site_rep') %>% 
+   left_join(nativecover, by = 'site_rep') %>% 
   group_by(standtype, site) %>%
   summarize(mean_height = mean(height_cm),
             n = length((height_cm)),
@@ -2481,13 +2494,13 @@ ggplot(standheight_site_meanSD,
 
 # columnn plot - mean height x nngrass
 ggplot(standheight_siterep_meanSD, 
-       aes(x = mean_nngrasscover, y = mean_height, color = site)) +
+       aes(x = mean_nngrasscover, y = mean_height, color = standtype)) +
   geom_point() +
   geom_errorbar(aes(ymin = mean_height - se, ymax = mean_height + se)) +
   # theme(axis.text.x.bottom = element_text(angle = 90)) +
   labs(x = "Non-native grass cover (%)", 
    y = "Mean canopy height (cm)", 
-       title = "Mean canopy height (cm) by non-native grass cover (%)")
+       title = "Mean canopy height (cm) per transect by non-native grass cover (%)")
 
 # columnn plot x site
 ggplot(standheight_site_meanSD, 
@@ -2626,22 +2639,22 @@ transect_prepCOV <- standheight_siterep_meanSD %>%
 
 transectCOV <- standheight_full %>% 
   left_join(transect_prepCOV, by = 'site_rep') %>% 
-   dplyr::select(!c('standtype.y')) %>% 
-  rename('standtype' = 'standtype.x') %>% 
+  dplyr::select(!c("standtype.y")) %>% 
+  rename(standtype = standtype.x) %>% 
   mutate(dist_from_mean = height_cm - mean_height) %>% 
-  left_join(nncover, by = 'site_rep') %>% 
-  dplyr::select(!c('standtype', 'standtype.y', 'X')) %>% 
-  rename('standtype' = 'standtype.x')
+  left_join(nativecover, by = "site_rep")
+  #dplyr::select(!c("standtype", "standtype.y", "X")) %>% 
+ # rename(standtype = standtype.x)
   
 
-print(transectCOV)
+head(transectCOV)
 ```
 
 ```{r graph distance from mean canopy height, include=FALSE}
 
 # distance from mean canopy height x transect
 # - scatterplot
-ggplot(data = transectCOV, 
+ggplot(data = transectCOV, # standheight_cov_transect
        aes(x = site_rep, y = dist_from_mean)) +
   geom_point() +
   theme(axis.text.x.bottom = element_text(angle = 90)) +
@@ -2659,7 +2672,7 @@ ggplot(transectCOV,
 
 # distance from mean canopy height x nn grass cover
 ggplot(transectCOV, 
-       aes(x = percentcover_nonnative, y = dist_from_mean)) +
+       aes(x = nonnative_grass, y = dist_from_mean)) +
   geom_point(aes(fill = standtype), colour = "black", size = 3, pch = 21) +
  # theme(axis.text.x.bottom = element_text(angle = 90)) +
 labs(x = "Average non-native grass cover (%)", 
@@ -2728,6 +2741,10 @@ TukeyHSD(aov((cov ~ standtype) , data = standheight_cov), conf.level=.95)
 #Degraded-Matrix -0.34503560 -0.5102423 -0.17982888 0.0003305 <-- Deg and Mat
 
 # Degraded sites are significantly more homogeneous than the INT and MAT standtypes
+```
+
+```{r canopy COV linear regression}
+
 ```
 
 ### 1.3 Shrub density 
