--- a/ch1_all_nmds.Rmd
+++ b/ch1_all_nmds.Rmd
@@ -36,7 +36,18 @@ abcover_raw <- read_csv("processed/abcover_full_omitground.csv")
 
 
 ```{r Unified data frame}
+sort(unique(abcover_raw$species))
 abcover_byspecies <- abcover_raw %>% 
+   # mutate(species = case_when(species == "Bromus diandrus" ~ "Bromus spp.", # old name ~ new name
+   #                            species ==  "Bromus diandrus dead" ~ "Bromus spp. dead",
+   #                              species == "Bromus hordeaceus" ~ "Bromus spp.",
+   #                            species == "Bromus madritensis" ~ "Bromus spp.",
+   #                              species == "Bromus rubens" ~ "Bromus spp.", 
+   #                            species == "Bromus rubens dead" ~ "Bromus spp. dead", 
+   #                             species == "Bromus hordeaceus" ~ "Bromus spp.",
+   #                            species == "Centaurea melitensis dead" ~ "Centaurea melitensis",
+   #                            species == "Hirschfeldia incana dead" ~ "Hirschfeldia incana",
+   #        TRUE ~ species)) %>% 
   group_by(site, species, lifeform, status, family) %>% 
   filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
   filter(!is.na(species)) %>% # omit blank cells in species 
@@ -58,9 +69,10 @@ density_byspecies <- density_raw %>%
   dplyr::select(!c(species, datatype)) %>% 
   rename(species = species_datatype)
 
+sort(unique(germination_raw$genus_abundance))
 germination_byspecies <- germination_raw %>%
+  group_by(site, species_diversity) %>%
   rename(species = species_diversity) %>%
-  group_by(site, species) %>%
   dplyr::summarize(seed_density = mean(n_per_cm3)) %>% 
   mutate(datatype = as.character("sd")) %>% # adding "seed bank" identifier to species name
   mutate(species_datatype = paste(species, datatype, sep="_")) %>% 
@@ -108,7 +120,11 @@ nmds.fort <- fortify(nmds_total.nmds)
 ```{r NMDS prep from Stephanie code}
 
 nmds_total.nmds2 <- metaMDS(nmds_total, 
-                            autotransform = F)
+                            autotransform = T,
+                             distance = "bray",
+                 k = 2,
+                 try = 100,
+                 trymax = 100)
 
 scores(nmds_total.nmds2)
 
@@ -158,16 +174,18 @@ nmds_total.nmds2_coord <- nmds_total.nmds2_fit %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., nmds_total.nmds2_pvals, by = "species") %>% 
-  filter(pvals <= 0.02) %>% # <-- set p-value level here
+  filter(pvals <= 0.008) %>% # <-- set p-value level here
   filter(!species == 'standtype_ID')
 dim(nmds_total.nmds2_coord) # <-- limit number of vectors to <7 for clarity
+#write.csv(nmds_total.nmds2_coord,"Ch1_Degradation_figures/nmds2_all_pval")
 
 # plot: nmds x hillslopes + labels 
 total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of scores()
                                           rename(hillslope = site), 
                                    aes(x = NMDS1, y = NMDS2)) +
   coord_equal() +
-  xlim(-1, 1) +
+  xlim(-2, 2) +
+  ylim(-2, 2) +
   geom_point(aes(color = hillslope, shape = hillslope), 
              size = 3, alpha = 0.8, position = position_jitter(width = 0.1, height = 0.1)) + 
   #stat_ellipse(aes(color = hillslope)) +
@@ -178,7 +196,7 @@ total_nmds2_hillslope_vectors <- ggplot(nmds_total.nmds2_plot %>% # output of sc
                arrow = arrow(length = unit(0.25, "cm")),
                 col = "black") +
    geom_text(data = nmds_total.nmds2_coord, aes(label = species),  
-             position = position_jitter(width = 0.4, height = 0.4)
+             position = position_jitter(width = 0.0, height = 0.4)
              )
 total_nmds2_hillslope_vectors + theme_bw()
 total_nmds2_hillslope_vectors + theme_bw()
